--- a/tests/test2/test.html
+++ b/tests/test2/test.html
@@ -1,3 +1,64 @@
 <div style="text-align: center; font-size: 2rem; margin-bottom: 2rem;">TEST 2</div>
-
-<!-- ... -->
+<div class="wrap">
+  <div class="container">
+    <div class="cards">
+      <div class="card">
+        <div class="card__img">
+          <img src="../../public/images/img1.jpg" alt="nature">
+        </div>
+        <div class="card__info">
+          <div class="card__info-type">Technology</div>
+          <div class="card__info-title">Revolutionizing Our Production Process</div>
+          <div class="card__info-text">Learn how our recent investment in new technology has revolutionized our production process, leading to improved efficiency and product quality.</div>
+          <div class="card__info-comment">
+            <div class="card__info-comment-img">
+              <img src="../../public/images/portret1.png" alt="avatar">
+            </div>
+            <div class="card__info-comment-data">
+              <div class="card__info-comment-data-name">John Doe</div>
+              <div class="card__info-comment-data-time">2022-08-15</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card__img">
+          <img src="../../public/images/img2.jpg" alt="nature">
+        </div>
+        <div class="card__info">
+          <div class="card__info-type">Expansion</div>
+          <div class="card__info-title">Expanding Our Service Network</div>
+          <div class="card__info-text">Discovery how our expansion investment has allowed us to enhance our service network, providing better support and customer experience.</div>
+          <div class="card__info-comment">
+            <div class="card__info-comment-img">
+              <img src="../../public/images/portret2.png" alt="avatar">
+            </div>
+            <div class="card__info-comment-data">
+              <div class="card__info-comment-data-name">Jane Smith</div>
+              <div class="card__info-comment-data-time">2022-09-02</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card__img">
+          <img src="../../public/images/img3.jpg" alt="nature">
+        </div>
+        <div class="card__info">
+          <div class="card__info-type">Sustainability</div>
+          <div class="card__info-title">Sustainable Practices for a Greener Future</div>
+          <div class="card__info-text">Find out how our investment in sustainable practices is driving us towards a greener future? showcasing our commitment to environmental responsibility.</div>
+          <div class="card__info-comment">
+            <div class="card__info-comment-img">
+              <img src="../../public/images/portret3.png" alt="avatar">
+            </div>
+            <div class="card__info-comment-data">
+              <div class="card__info-comment-data-name">John Doe</div>
+              <div class="card__info-comment-data-time">2022-09-20</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
